--- a/calculadora/style.css
+++ b/calculadora/style.css
@@ -37,6 +37,7 @@ div{
     width: 60px;
     height: 50px;
     margin-bottom: 10px;
+    font-size: 16pt;
 }
 
 .nummaincolor, .soma, .subt, .mult, .div, .igual{
